astro/src/content/docs/identityserver/reference/v8/services/device-flow-interaction-service.md
---
title: "Device Flow Interaction Service"
description: Documentation for the IDeviceFlowInteractionService interface which provides services for user interfaces to communicate with IdentityServer during device flow authorization.
date: 2020-09-10T08:22:12+02:00
sidebar:
  label: Device Flow Interaction
  order: 65
redirect_from:
  - /identityserver/v5/reference/services/device_flow_interaction_service/
  - /identityserver/v6/reference/services/device_flow_interaction_service/
  - /identityserver/reference/services/device-flow-interaction-service/
---

#### Duende.IdentityServer.Services.IDeviceFlowInteractionService

The `IDeviceFlowInteractionService` interface is intended to provide services to be used by the user interface to
communicate with Duende IdentityServer during device flow authorization.
It is available from the dependency injection system and would normally be injected as a constructor parameter into your
MVC controllers for the user interface of IdentityServer.

## IDeviceFlowInteractionService APIs

All async methods accept a `CancellationToken ct` parameter.

* **`GetAuthorizationContextAsync(string userCode, CancellationToken ct)`**

  Returns the `DeviceFlowAuthorizationRequest` based on the `userCode` passed to the login or consent pages.

* **`HandleRequestAsync(string userCode, ConsentResponse consent, CancellationToken ct)`**

  Completes device authorization for the given `userCode`. Note that `ConsentResponse.RememberConsent` is always treated as `false` in device flow. Consent is never persisted across device flow sessions. This follows [RFC 8628](https://www.rfc-editor.org/rfc/rfc8628) security guidance, since the device initiating the flow is different from the device where the user authenticates.

## DeviceFlowAuthorizationRequest

* **`Client`**

  The client that initiated the device authorization request.

* **`ValidatedResources`**

  The validated resources (scopes and resource indicators) requested by the client.

## DeviceFlowInteractionResult

* **`IsError`**

  Specifies if the authorization request errored.

* **`IsAccessDenied`**

  Gets or sets a value indicating whether the user denied access.

* **`ErrorDescription`**

  Error description upon failure.

* **`Failure(string errorDescription = null)`** *(static method)*

  Creates a `DeviceFlowInteractionResult` indicating failure with an optional error description.
